2006-06-02  Graham Percival  <gpermus@gmail.com>

	* tex/texinfo.tex: partial fix for @funindex.

	* Documentation/user/macros.tely: uncomment @funindex (doesn't
	break anything).

2006-06-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* tex/texinfo.tex (sectionheading, q.v.): call \quoteexpand for
	@example too. Backportme.

2006-06-02  Graham Percival  <gpermus@gmail.com>

	* tex/texinfo.cnf: added UTF-8 support for texinfo; patch
	from Werner Lemberg.

2006-06-02  Paco (Francisco Vila)  <fravd@ya.com>

	* Documentation/user/music-glossary.tely: additional spanish
	updates and a lyrics fix in an example.

2006-06-02  Jürgen Reuter  <reuter@ipd.uka.de>

	* scm/define-grob-properties.scm: Previous patch contained
	spurious line from another patch not yet committed.  Fixed.

	* scm/define-grob-properties.scm: Add missing doc strings for
	ancient notation.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/output-distance.py
	(ComparisonData.write_text_result_page): separate the scores, sort
	by geo_score.

	* scm/framework-eps.scm (output-classic-framework): start at 1 for
	system signatures.

	* buildscripts/output-distance.py (me_path): use argv[0] for
	sys.path extension
	(ComparisonData.img_cell): use colored borders.

	* scm/stencil.scm (write-system-signature): escape newlines too.
	(write-system-signature): use (1,-1) interval for empty interval

2006-01-01  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/music-glossary.tely: Spanish updates
	from Francisco Vila.

	* Documentation/user/lilypond-book.itely: addition from
	Vaclav Smilauer.

	* Documentation/user/ various: edits, small additions
	from mailist, etc.

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (tree-lib-prefix-current):
	(tree-share-prefix-current): Use version number in tree, add
	`current' symlinks.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: write VERSION, again.
